Some extra suggested fixes

--- a/modules/client-configuration/pages/contact-methods-saltssh.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh.adoc
@@ -9,8 +9,8 @@ No system within the DMZ is authorized to open a connection to the internal netw
 The Push via Salt SSH method creates an encrypted tunnel from the {productname} Server on the internal network to the clients located on the DMZ.
 After all actions and events are executed, the tunnel is closed.
 
-The server uses the [command]``salt-ssh`` tool to contact the clients at regular intervals, checking in and performing scheduled actions and events.
-For more information about Salt SSH, see xref:specialized-guides:salt/salt-ssh.adoc[].
+The server uses the Salt SSH to contact the clients at regular intervals, checking in and performing scheduled actions and events.
+For more information about Salt SSH, see xref:specialized-guides:salt/salt-ssh.adoc[Salt SSH].
 
 This contact method works for Salt clients only.
 For traditional clients, use Push via SSH.
