--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -28,7 +28,7 @@ As with all Salt calls, {productname} invokes `salt-ssh` via the `salt-api`.
 
 Salt SSH relies on a roster to obtain details such as hostname, ports, and the SSH parameters of a client.
 {productname} keeps these details in the database and makes them available to Salt SSH by using the [literal]``uyuni`` roster module, or by generating a temporary roster file on bootstrapping new clients with the {webui}.
-The location of the temporary roster file is supplied to `salt-ssh` using the [option]``roster-file`` option.
+The location of the temporary roster file is supplied to Salt SSH using the [option]``roster-file`` option.
 For the registered clients [option]``roster`` set to `uyuni` is used instead to get the roster from the database with `uyuni` salt roster module.
 
 [IMPORTANT]
