--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -81,6 +81,6 @@ The Salt Bundle can be used with the Salt Minion managed by the Salt Master othe
 
 [IMPORTANT]
 ====
-To bootstrap the client with the Salt Minion managed by the Salt Master other than {productname} Server it is recommended to use [command]``mgr-bootstrap`` [option]``--force-bundle`` on generating bootstrap script, or set [option]``FORCE_VENV_SALT_MINION`` to `1` in the bootstrap script.
+To bootstrap a client with the Salt Minion managed by the Salt Master other than {productname} Server it is recommended to use [command]``mgr-bootstrap`` [option]``--force-bundle`` when generating the bootstrap script, or to set [option]``FORCE_VENV_SALT_MINION`` to `1` in the bootstrap script.
 For bootstrapping with {webui} [literal]``mgr_force_venv_salt_minion`` set to [literal]``true`` pillar can be specified globally. See xref:specialized-guides:salt/salt-states-and-pillars.adoc[Salt States and Pillars] for more information.
 ====
