Fix users to literal in salt-ssh and extract `it`

--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -35,7 +35,7 @@ For the registered clients [option]``roster`` set to `uyuni` is used instead to 
 ====
 It is not recommended to run [command]``salt-ssh`` as [literal]``root`` user. This can cause permission issues the next time {productname} tries to use Salt SSH.
 Use [command]``mgr-salt-ssh`` instead because it is changing effective user to `salt` on each call.
-If you want to use it with a user other than `root`, the user should have the permission to change effective user to `salt`.
+If you want to use [command]``mgr-salt-ssh`` with a user other than [literal]``root``, the user should have the permission to change effective user to [literal]``salt``.
 ====
 
 
