Add extra Salt Bundle details (#1458)
* Add examples of using util.mgr_switch_to_venv_minion

* Add Salt bundle details to registration-webui

* Add Salt bundle note to registration-bootstrap

* Fix typos and fix the section

* Fix formatting registration-cli

* Fix the NOTE in registration-cli

* Fix salt-ssh xref

* Remove the statement that web UI bootsrap requires Python

from registration-methods-saltbundle

* Put some changes to salt-ssh doc section

* Update modules/specialized-guides/pages/salt/salt-ssh.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/specialized-guides/pages/salt/salt-ssh.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Describe roster and roster-file options different way

* Remove contact-methods-salt-cfgfile

(Client Configuration Guide / Client Management Methods /
Managing Salt Clients / Salt Minion Configuration File)

* Move registration-methods-saltbundle contact-methods-saltbundle

(Client Configuration Guide \ Client Registration \ Registration Methods \ Register with Salt Bundle ->
Client Configuration Guidei \ Client Management Methods \ Managing Salt Clients)

* Extend Salt Bundle article

* Squash suggestions by @meaksh and @agraul

Co-authored-by: Pablo Suárez Hernández <psuarezhernandez@suse.com>
Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Pablo Suárez Hernández <psuarezhernandez@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Pablo Suárez Hernández <psuarezhernandez@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Pablo Suárez Hernández <psuarezhernandez@suse.com>

Update modules/client-configuration/pages/contact-methods-saltbundle.adoc

Co-authored-by: Alexander Graul <agraul@suse.com>

Update modules/client-configuration/pages/contac

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -31,15 +31,16 @@ Bootstrapping this way will only work if you use the [package]``salt-minion`` be
 Salt Bundle ([package]``venv-salt-minion``)::
 +
 * [path]``/etc/venv-salt-minion/``
-* [path}``/etc/venv-salt-minion/minion``
+* [path]``/etc/venv-salt-minion/minion``
 * [path]``/etc/venv-salt-minion/minion.d/NAME.conf``
 * systemd service file: [path]``venv-salt-minion.service``
 
-For more information about the Salt bundle, see xref:client-configuration:registration-methods-saltbundle.adoc[].
+For more information about the Salt bundle, see xref:client-configuration:contact-methods-saltbundle.adoc[Salt Bundle].
 
 
 
 .Procedure: Registering Clients with Salt Bundle Configuration File
+--
 . On the Salt client, open the [literal]``minion`` configuration file.
   The configuration file is either located at:
 +
@@ -76,17 +77,19 @@ systemctl restart venv-salt-minion
 ----
 salt-key -a '<client>'
 ----
+--
 
 
 
-Salt ([package]``salt-minion``)::
+Salt Minion ([package]``salt-minion``)::
 +
 * [path]``/etc/salt/``
-* [path}``/etc/salt/minion``
+* [path]``/etc/salt/minion``
 * [path]``/etc/salt/minion.d/NAME.conf``
 * systemd service file: [path]``salt-minion.service``
 
 .Procedure: Registering Clients with Salt Minion Configuration File
+--
 . On the Salt client, open the [literal]``minion`` configuration file.
   The configuration file is either located at:
 +
@@ -123,8 +126,12 @@ systemctl restart salt-minion
 ----
 salt-key -a '<client>'
 ----
+--
 
+[NOTE]
+====
 For more information about the Salt minion configuration file, see https://docs.saltstack.com/en/latest/ref/configuration/minion.html.
+====
 
 [WARNING]
 ====
