--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -121,6 +121,11 @@ ORG_GPG_KEY=
 
 . When you have finished, save the file, and repeat this procedure for the second bootstrap script.
 
+[NOTE]
+====
+By default, bootstrap script will try to install [package]``venv-salt-minion`` for Salt clients if it's available in the bootstrap repository and [package]``salt-minion`` if there is no Salt bundle in the bootstrap repository.
+It is posible to avoid installing Salt bundle and keep using [package]``salt-minion`` if you need it for some reason. See xref:client-configuration:contact-methods-saltbundle.adoc[Salt Bundle] for details.
+====
 
 
 == Connect Clients
