--- a/modules/client-configuration/pages/registration-webui.adoc
+++ b/modules/client-configuration/pages/registration-webui.adoc
@@ -3,13 +3,17 @@
 
 Registering clients with the {productname} {webui} works for Salt clients only.
 
-If you are bootstrapping Salt clients using the {webui}, you need to ensure that the client system has Python installed before you begin.
-For Salt clients running {sles}{nbsp}12 or older, you also need the [package]``python-xml`` package.
-// FIXME: change Salt bundle, when implemented
-// If you use the Salt bundle, which now is the default, the needed Python environment will be provided automatically.
-// For more information, see xref:client-configuration:registration-methods-saltbundle.adoc[].
+If you are bootstrapping Salt clients using the {webui}, it is using xref:specialized-guides:salt/salt-ssh.adoc[Salt SSH] to execute the bootstrap process on the client.
+Salt SSH uses the Salt Bundle and its included Python interpreter. Therefore, no other Python interpreter needs to be installed on the client.
 
 [IMPORTANT]
+====
+As Salt Bundle is shipped with the bootstrap repository, the repository must be created before starting the bootstrap process for the client.
+A shell script detects the operating system on the client and deploys the Salt Bundle from the appropriate bootstrap repository, using the same logic as the bootstrap script.
+For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository].
+====
+
+[WARNING]
 ====
 Do not register the {productname} Server to itself.
 The {productname} Server must be managed individually or by using another separate {productname} Server.
