Few more fixes for Salt Bundle

--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -11,7 +11,7 @@ It is also possible to use the Salt Bundle on systems that run a Salt Minion con
 
 == Client Registration with Salt Bundle as a Minion
 
-The registration method with the Salt Bundle is the recommended registration method as long as it covers your use case.
+The registration method with the Salt Bundle is the recommended registration method.
 This section explains the advantages and limitations of the current implementation.
 The Salt Bundle is provided as the [package]``venv-salt-minion`` that consists of Salt, Python 3, and the Python modules Salt depends on.
 Bootstrapping with {webui} is using Salt Bundle as well, so bootstrapping with {webui} is not Python dependant.
@@ -64,7 +64,7 @@ The Python 3 deployed with the Bundle is used to handle Salt SSH session on the 
 
 [IMPORTANT]
 ====
-The bootstrap repository must be created before bootstrapping the client with {webui}. The pre flight script is detecting the OS on the client and using the bootstrap repository relevant for the OS version.
+The bootstrap repository must be created before bootstrapping the client with {webui}. Salt SSH is using the Salt Bundle taken from the bootstrap repository based on the detected target operating system.
 For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository]
 ====
 
