--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -21,6 +21,16 @@ If you bootstrap new clients, registration with the Salt Bundle is the default m
 You can switch existing clients to the Salt Bundle method.
 If you switch, the [package]``salt-minion`` package and its dependencies will stay installed.
 
+=== Using the Salt Bundle with the Salt Minion
+
+The Salt Bundle can be used with the Salt Minion managed by the Salt Master other than {productname} Server at the same time.
+
+[IMPORTANT]
+====
+To bootstrap a client with the Salt Minion managed by the Salt Master other than {productname} Server it is recommended to use [command]``mgr-bootstrap`` [option]``--force-bundle`` when generating the bootstrap script, or to set [option]``FORCE_VENV_SALT_MINION`` to `1` in the bootstrap script.
+For bootstrapping with {webui} [literal]``mgr_force_venv_salt_minion`` set to [literal]``true`` pillar can be specified globally. See xref:specialized-guides:salt/salt-states-and-pillars.adoc[Salt States and Pillars] for more information.
+====
+
 === Switching from Salt Minion to Salt Bundle
 
 The Salt state [literal]``util.mgr_switch_to_venv_minion`` is available to switch from [package]``salt-minion`` to [package]``venv-salt-minion``.
@@ -73,14 +83,4 @@ For more information, see xref:client-configuration:bootstrap-repository.adoc#_p
 Using `salt-thin` can be enabled as a fallback method, but it requires Python 3 to be installed on the client.
 This method is not recommended nor supported and exists for development purposes only.
 Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf`` configuration file.
-====
-
-== Using the Salt Bundle with the Salt Minion
-
-The Salt Bundle can be used with the Salt Minion managed by the Salt Master other than {productname} Server at the same time.
-
-[IMPORTANT]
-====
-To bootstrap a client with the Salt Minion managed by the Salt Master other than {productname} Server it is recommended to use [command]``mgr-bootstrap`` [option]``--force-bundle`` when generating the bootstrap script, or to set [option]``FORCE_VENV_SALT_MINION`` to `1` in the bootstrap script.
-For bootstrapping with {webui} [literal]``mgr_force_venv_salt_minion`` set to [literal]``true`` pillar can be specified globally. See xref:specialized-guides:salt/salt-states-and-pillars.adoc[Salt States and Pillars] for more information.
 ====
