Add extra details about config files with xrefs

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -1,9 +1,7 @@
 [[registering-clients-cli]]
 = Register on the Command Line (Salt)
 
-// Might need an 'unsupported' note? LKB 2019-05-01
-// I'd say "no", according to the outcome of
-// https://github.com/SUSE/spacewalk/issues/9333 KE 2019-12-17
+== Manual Salt client registration
 
 In most cases, Salt clients are registered accurately with the default bootstrap methods.
 However, you can use Salt to register the client to the {productname} Server manually by editing the Salt minion file on the client, and providing the fully qualified domain name (FQDN) of the server.
@@ -27,6 +25,7 @@ The systemd service filename is different.
 Bootstrapping this way will only work if you use the [package]``salt-minion`` being part of the client tools channels or of an official {suse} distributions.
 ====
 
+== Salt Bundle configuration
 
 Salt Bundle ([package]``venv-salt-minion``)::
 +
@@ -80,6 +79,7 @@ salt-key -a '<client>'
 --
 
 
+== Salt Minion configuration
 
 Salt Minion ([package]``salt-minion``)::
 +
