--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -24,6 +24,8 @@ If you switch, the [package]``salt-minion`` package and its dependencies will st
 === Using the Salt Bundle with the Salt Minion
 
 The Salt Bundle can be used with the Salt Minion managed by the Salt Master other than {productname} Server at the same time.
+If the Salt Bundle is installed on a client {productname} Server will manage its configuration files, the configuration files of [literal]``salt-minion`` will not be managed in this case.
+For more information, see xref:client-configuration:registration-cli.adoc#_salt_bundle_configuration[Salt Bundle configuration].
 
 [IMPORTANT]
 ====
