--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -38,7 +38,8 @@ Use [command]``mgr-salt-ssh``, which changes the effective user to [literal]``sa
 If you want to use [command]``mgr-salt-ssh`` with a user other than [literal]``root``, the user should have the permission to change effective user to [literal]``salt``.
 ====
 
-[command]``mgr-salt-ssh`` uses [option]``roster`` set to [literal]``uyuni`` by default, if neither [option]``roster`` nor [option]``roster-file`` specified in the command line. It helps to call salt commands to the registered Salt SSH clients with no roster file generation.
+[command]``mgr-salt-ssh`` uses [option]``roster`` set to [literal]``uyuni`` by default, if neither [option]``roster`` nor [option]``roster-file`` specified in the command line.
+It helps to call Salt commands to the registered Salt SSH clients with no roster file generation.
 
 
 == Authentication
