--- a/modules/client-configuration/pages/snippets/addchannels_vendor_webui.adoc
+++ b/modules/client-configuration/pages/snippets/addchannels_vendor_webui.adoc
@@ -2,6 +2,6 @@
 . In the {productname} {webui}, navigate to menu:Admin[Setup Wizard > Products].
 . Locate the appropriate products for your client operating system and architecture using the search bar, and check the appropriate product.
   This will automatically check all mandatory channels.
-  Depending on your usecase, also check the optional Client Tools Channel.
+  Also all recommended channels are checked as long as the [guimenu]``include recommended`` toggle is turned on.
   Click the arrow to see the complete list of related products, and ensure that any extra products you require are checked.
 . Click btn:[Add Products] and wait until the products have finished synchronizing.
