fix: Cobbler upstream documentation link
This will fix the link for the upstream Cobbler documentation. It is
no longer found on github.io but on readthedocs.io.

Signed-off-by: Dominik Gedon <dgedon@suse.de>

--- a/modules/client-configuration/pages/autoinst-intro.adoc
+++ b/modules/client-configuration/pages/autoinst-intro.adoc
@@ -44,5 +44,5 @@ These operating systems must be installed manually.
 [NOTE]
 ====
 The autoinstallation features of SUSE Manager are based on a software named Cobbler.
-For more information, see https://cobbler.github.io/quickstart/.
+For more information, see https://cobbler.readthedocs.io.
 ====
