Few more fixes for Salt Bundle (#1480)
* Few more fixes for Salt Bundle
* Move using the bundle into client registration with Bundle
* Add extra details about config files with xrefs
* Update modules/client-configuration/pages/contact-methods-saltbundle.adoc
Co-authored-by: Karl Eichwalder <ke@suse.de>
* Update modules/specialized-guides/pages/salt/salt-ssh.adoc
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/specialized-guides/pages/salt/salt-ssh.adoc
+++ b/modules/specialized-guides/pages/salt/salt-ssh.adoc
@@ -34,10 +34,12 @@ For the registered clients [option]``roster`` set to `uyuni` is used instead to 
 [IMPORTANT]
 ====
 It is not recommended to run [command]``salt-ssh`` as [literal]``root`` user. This can cause permission issues the next time {productname} tries to use Salt SSH.
-Use [command]``mgr-salt-ssh`` instead because it is changing effective user to `salt` on each call.
+Use [command]``mgr-salt-ssh``, which changes the effective user to [literal]``salt`` and avoids file permission issues.
 If you want to use [command]``mgr-salt-ssh`` with a user other than [literal]``root``, the user should have the permission to change effective user to [literal]``salt``.
 ====
 
+[command]``mgr-salt-ssh`` uses [option]``roster`` set to [literal]``uyuni`` by default, if neither [option]``roster`` nor [option]``roster-file`` specified in the command line.
+It helps to call Salt commands to the registered Salt SSH clients with no roster file generation.
 
 
 == Authentication
