--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -11,7 +11,7 @@ It is also possible to use the Salt Bundle on systems that run a Salt Minion con
 
 == Client Registration with Salt Bundle as a Minion
 
-The registration method with the Salt Bundle is the recommended registration method as long as it covers your use case.
+The registration method with the Salt Bundle is the recommended registration method.
 This section explains the advantages and limitations of the current implementation.
 The Salt Bundle is provided as the [package]``venv-salt-minion`` that consists of Salt, Python 3, and the Python modules Salt depends on.
 Bootstrapping with {webui} is using Salt Bundle as well, so bootstrapping with {webui} is not Python dependant.
@@ -20,6 +20,19 @@ Using the Salt Bundle, it is no longer needed that the client provides any Pytho
 If you bootstrap new clients, registration with the Salt Bundle is the default method.
 You can switch existing clients to the Salt Bundle method.
 If you switch, the [package]``salt-minion`` package and its dependencies will stay installed.
+
+=== Using the Salt Bundle with the Salt Minion
+
+The Salt Bundle can be used with the Salt Minion managed by the Salt Master other than {productname} Server at the same time.
+If the Salt Bundle is installed on a client {productname} Server will manage the configuration files of the Salt Bundle, the configuration files of [literal]``salt-minion`` will not be managed in this case.
+For more information, see xref:client-configuration:registration-cli.adoc#_salt_bundle_configuration[Salt Bundle configuration].
+
+[IMPORTANT]
+====
+To bootstrap a client with the Salt Minion managed by the Salt Master other than {productname} Server it is recommended to use [command]``mgr-bootstrap`` [option]``--force-bundle`` when generating the bootstrap script, or to set [option]``FORCE_VENV_SALT_MINION`` to `1` in the bootstrap script.
+For bootstrapping with {webui} [literal]``mgr_force_venv_salt_minion`` set to [literal]``true`` pillar can be specified globally.
+For more information, see xref:specialized-guides:salt/salt-states-and-pillars.adoc[Salt States and Pillars].
+====
 
 === Switching from Salt Minion to Salt Bundle
 
@@ -64,7 +77,7 @@ The Python 3 deployed with the Bundle is used to handle Salt SSH session on the 
 
 [IMPORTANT]
 ====
-The bootstrap repository must be created before bootstrapping the client with {webui}. The pre flight script is detecting the OS on the client and using the bootstrap repository relevant for the OS version.
+The bootstrap repository must be created before bootstrapping the client with {webui}. Salt SSH is using the Salt Bundle taken from the bootstrap repository based on the detected target operating system.
 For more information, see xref:client-configuration:bootstrap-repository.adoc#_prepare_to_create_a_bootstrap_repository[Prepare to Create a Bootstrap Repository]
 ====
 
@@ -73,14 +86,4 @@ For more information, see xref:client-configuration:bootstrap-repository.adoc#_p
 Using `salt-thin` can be enabled as a fallback method, but it requires Python 3 to be installed on the client.
 This method is not recommended nor supported and exists for development purposes only.
 Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf`` configuration file.
-====
-
-== Using the Salt Bundle with the Salt Minion
-
-The Salt Bundle can be used with the Salt Minion managed by the Salt Master other than {productname} Server at the same time.
-
-[IMPORTANT]
-====
-To bootstrap a client with the Salt Minion managed by the Salt Master other than {productname} Server it is recommended to use [command]``mgr-bootstrap`` [option]``--force-bundle`` when generating the bootstrap script, or to set [option]``FORCE_VENV_SALT_MINION`` to `1` in the bootstrap script.
-For bootstrapping with {webui} [literal]``mgr_force_venv_salt_minion`` set to [literal]``true`` pillar can be specified globally. See xref:specialized-guides:salt/salt-states-and-pillars.adoc[Salt States and Pillars] for more information.
 ====
