--- a/modules/administration/pages/ssl-certs.adoc
+++ b/modules/administration/pages/ssl-certs.adoc
@@ -57,7 +57,7 @@ This manual describe the use of SSL certificates in 2 steps
 1. How to create a self-signed certificate with {productname} tools
 2. How to deploy a certificate on {productname} Server or Proxy
 
-In case the Certificates are provided by a 3rd Party instance like an own or external PKI, step 1 can be skipped.
+In case the certificates are provided by a third party instance like an own or external PKI, step 1 can be skipped.
 
 * For more on how to create self-signed certificates, see xref:administration:ssl-certs-selfsigned.adoc[].
 * For more on how to imported certificates, see xref:administration:ssl-certs-imported.adoc[].
