--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -1,13 +1,18 @@
 [[contact-methods-salt]]
 = Salt Bundle
 
+
+
 == What is Salt Bundle?
 
-The Salt Bundle is a single binary package containing Salt Minion, Python 3, required Python modules and libraries.
+The Salt Bundle is a single binary package containing Salt Minion, Python 3, required Python modules, and libraries.
 
-As the Salt Bundle is shipped with Python 3 and all the requirements for Salt to run, the Salt Bundle is not using the Python version coming from the system, so it can be installed on clients which doesn't meet the requirements for a given Salt version.
+The Salt Bundle is shipped with Python 3 and all the requirements for Salt to run. Thus Salt Bundle does not use the Python version install on the client as system software.
+The Salt Bundle can be installed on clients that do not meet the requirements for a given Salt version.
 
-It is also possible to use the Salt Bundle on systems that run a Salt Minion connected to a Salt Master other than {poductname} Salt Master.
+It is also possible to use the Salt Bundle on systems that run a Salt Minion connected to a Salt Master other than the {productname} Salt Master.
+
+
 
 == Client Registration with Salt Bundle as a Minion
 
@@ -20,6 +25,8 @@ Using the Salt Bundle, it is no longer needed that the client provides any Pytho
 If you bootstrap new clients, registration with the Salt Bundle is the default method.
 You can switch existing clients to the Salt Bundle method.
 If you switch, the [package]``salt-minion`` package and its dependencies will stay installed.
+
+
 
 === Using the Salt Bundle with the Salt Minion
 
