docs: Correct cobbler's buildiso command
This will include the missing `--distro` parameter cobbler `buildiso`
needs to work.

See

- https://github.com/cobbler/cobbler/issues/2978
- https://github.com/SUSE/spacewalk/issues/17308

Signed-off-by: Dominik Gedon <dgedon@suse.de>

--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -30,11 +30,13 @@ In order to prepare an ISO image with Cobbler, you need to prepare a distributio
 For information about creating a distribution, see xref:client-configuration:autoinst-distributions.adoc[Autoinstallable Distributions].
 For information about creating a profile, see xref:client-configuration:autoinst-profiles.adoc[Autoinstallation Profiles].
 
-The Cobbler [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO.
+The Cobbler [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO. A distribution
+has to be provided in all cases with [option]``--distro``. 
+
 For example:
 
 ----
-cobbler buildiso --iso=/path/to/boot.iso
+cobbler buildiso --iso=/path/to/boot.iso --distro=SLE_15-sp1
 ----
 
 The boot ISO includes all profiles and systems by default.
@@ -43,7 +45,7 @@ For example:
 
 ----
 cobbler buildiso --systems="system1 system2 system3" \
-  --profiles="profile1 profile2 profile3"
+  --profiles="profile1 profile2 profile3 --distro=SLE_15-sp1"
 ----
 
 [NOTE]
