--- a/modules/client-configuration/pages/client-upgrades-lifecycle.adoc
+++ b/modules/client-configuration/pages/client-upgrades-lifecycle.adoc
@@ -114,11 +114,11 @@ cobbler profile list
 ----
 +
 
-. Build the ISO file with your chosen profile:
+. Build the ISO file with your chosen profile and distribution:
 +
 
 ----
-cobbler buildiso --iso=/tmp/SLE_15-sp1.iso --profiles=SLE_15-sp1:1:Example
+cobbler buildiso --iso=/tmp/SLE_15-sp1.iso --profiles=SLE_15-sp1:1:Example --distro=SLE_15-sp1
 ----
 +
 
