--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -6,7 +6,7 @@ This section contains information about registering traditional and Salt clients
 They are sometimes also called SLESES, RES or {redhat} {es}.
 
 The {es} software channels provided by {suse} only provide updates to packages, they do not provide the packages themselves.
-To register {es} clients, you need to create custom empty base and child channels on your {productname} Server, then import the {redhat} or {centos} packages into the custom channels.
+To register {es} clients, you need to register the {es} Product (outlined below) to create the necessary base channel, then import any required {redhat} or {centos} packages as custom child channels.
 You must obtain the initial packages directly from {redhat} or {centos} before you can apply the updates provided by the {es} software channels.
 
 
