--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -30,9 +30,8 @@ In order to prepare an ISO image with Cobbler, you need to prepare a distributio
 For information about creating a distribution, see xref:client-configuration:autoinst-distributions.adoc[Autoinstallable Distributions].
 For information about creating a profile, see xref:client-configuration:autoinst-profiles.adoc[Autoinstallation Profiles].
 
-The Cobbler [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO. A distribution
-has to be provided in all cases with [option]``--distro``. 
-
+The Cobbler [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO.
+Specifying the distribution with [option]``--distro`` is mandatory.
 For example:
 
 ----
