Initial work in creating single Tshooting guide.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -79,7 +79,7 @@ endif::[]
 // Users
 ** xref:users.adoc[Users]
 // Troubleshooting - always keep as the last chapter
-** xref:tshoot-intro.adoc[Troubleshooting]
+** xref:tshoot-intro.adoc[OLD Troubleshooting]
 *** xref:tshoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
 *** xref:tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
 *** xref:tshoot-diskspace.adoc[Troubleshooting Disk Space]
@@ -98,6 +98,30 @@ endif::[]
 *** xref:tshoot-saltboot.adoc[Troubleshooting Saltboot]
 *** xref:tshoot-sync.adoc[Troubleshooting Synchronization]
 *** xref:tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
+*** xref:tshoot-clients.adoc[ADDED TSHOOT CLIENTS]
+*** xref:troubleshooting.adoc[ADDED TSHOOT INSTALL]
+// Troubleshooting - always keep as the last chapter
+** xref:troubleshooting/tshoot-intro.adoc[LEVEL DOWN Troubleshooting]
+*** xref:troubleshooting/shoot-corruptrepo.adoc[Troubleshooting Corrupt Repositories]
+*** xref:troubleshooting/tshoot-custom-channel.adoc[Troubleshooting Custom Channel]
+*** xref:troubleshooting/tshoot-diskspace.adoc[Troubleshooting Disk Space]
+*** xref:troubleshooting/tshoot-firewalls.adoc[Troubleshooting Firewalls]
+*** xref:troubleshooting/tshoot-inactiveclients.adoc[Troubleshooting Inactive Clients]
+*** xref:troubleshooting/tshoot-iss.adoc[Troubleshooting Inter-Server Synchronization]
+*** xref:troubleshooting/tshoot-localcert.adoc[Troubleshooting Local Certificates]
+*** xref:troubleshooting/tshoot-logintimeout.adoc[Troubleshooting Login Timeout]
+*** xref:troubleshooting/tshoot-notifications.adoc[Troubleshooting Notifications]
+*** xref:troubleshooting/tshoot-osadjabberd.adoc[Troubleshooting OSAD and jabberd]
+*** xref:troubleshooting/tshoot-packages.adoc[Troubleshooting Packages]
+*** xref:troubleshooting/tshoot-registerclones.adoc[Troubleshooting Registering Cloned Clients]
+*** xref:troubleshooting/tshoot-registertradrhel.adoc[Troubleshooting Registering Traditional RHEL Clients]
+*** xref:troubleshooting/tshoot-hostname-rename.adoc[Troubleshooting Renaming the Server]
+*** xref:troubleshooting/tshoot-rpctimeout.adoc[Troubleshooting RPC Timeouts]
+*** xref:troubleshooting/tshoot-saltboot.adoc[Troubleshooting Saltboot]
+*** xref:troubleshooting/tshoot-sync.adoc[Troubleshooting Synchronization]
+*** xref:troubleshooting/tshoot-taskomatic.adoc[Troubleshooting Taskomatic]
+*** xref:troubleshooting/tshoot-clients.adoc[ADDED TSHOOT CLIENTS]
+*** xref:troubleshooting/troubleshooting.adoc[ADDED TSHOOT INSTALL]
 
 ifdef::backend-pdf[]
 include::modules/ROOT/pages/common_gfdl1.2_i.adoc[leveloffset=+1]
