--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -179,6 +179,8 @@ The channels you need for this procedure are:
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
 If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+
+If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
 ====
 
 include::snippets/manual_channels.adoc[]
@@ -226,6 +228,8 @@ The products you need for this procedure are:
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
 If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+
+If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
 ====
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -269,6 +273,8 @@ The channels you need for this procedure are:
 {redhat} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {redhat} 6 clients using these packages will fail.
 If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+
+If you need to bootstrap new {redhat} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
@@ -376,4 +382,6 @@ For more information on registering your clients, see xref:client-configuration:
 ====
 To register and use {rhel}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
 For more information, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
+
+For more information, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-clients.adoc[].
 ====
