--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -70,6 +70,8 @@ For more about custom certificates, see xref:administration:ssl-certs.adoc[].
 ====
 To register and use {centos}{nbsp}6, {oracle}{nbsp}6, {rhel}{nbsp}6, or {sleses}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
 For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
+
+For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-clients.adoc[].
 ====
 
 
