--- a/modules/administration/pages/tshoot-inactiveclients.adoc
+++ b/modules/administration/pages/tshoot-inactiveclients.adoc
@@ -41,3 +41,5 @@ For more information about client connections to the server, see xref:client-con
 For more information about configuring ports, see xref:installation-and-upgrade:ports.adoc[].
 
 For more information about troubleshooting firewalls, see xref:administration:tshoot-firewalls.adoc[].
+
+For more information about troubleshooting firewalls, see xref:administration:troubleshooting/tshoot-firewalls.adoc[].
