--- a/modules/client-configuration/pages/clients-oracle.adoc
+++ b/modules/client-configuration/pages/clients-oracle.adoc
@@ -46,7 +46,7 @@ For example, when working with `x86_64` architecture, you need this products:
 ====
 {oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {oracle} 6 clients using these packages will fail.
-If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
 ====
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -69,7 +69,7 @@ The channels you need for this procedure are:
 ====
 {oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {oracle} 6 clients using these packages will fail.
-If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
 ====
 
 include::snippets/addchannels_vendor_cli.adoc[]
@@ -111,7 +111,7 @@ The channels you need for this procedure are:
 ====
 {oracle} 6 is now at end-of-life, and the ISO images provided in the repository are out of date.
 Bootstrapping new {oracle} 6 clients using these packages will fail.
-If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:client-configuration:tshoot-clients.adoc[].
+If you need to bootstrap new {oracle} 6 clients, follow the troubleshooting procedure in xref:administration:troubleshooting/tshoot-clients.adoc[].
 ====
 
 include::snippets/addchannels_novendor_cli.adoc[]
@@ -194,5 +194,5 @@ For more information, see xref:client-configuration:registration-overview.adoc[]
 [WARNING]
 ====
 To register and use {oracle}{nbsp}6 clients, you need to configure the {productname} Server to support older types of SSL encryption.
-For more information about how to resolve this error, see ``Registering Older Clients`` at xref:client-configuration:tshoot-clients.adoc[].
+For more information about how to resolve this error, see ``Registering Older Clients`` at xref:administration:troubleshooting/tshoot-clients.adoc[].
 ====
