--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -25,7 +25,8 @@ yourself. Furthermore cleaning up a Salt minion does not remove Salt itself.
 
 [NOTE]
 ====
-Normally you migrate a traditional client to a Salt minion without deleting the client. Salt automatically detects
-that you have a traditional client and does the necessary changes itself. But if you already deleted the traditional
-client and want to register it as a Salt minion again, see xref:installation-and-upgrade:troubleshooting.adoc[Troubleshooting].
+Normally you migrate a traditional client to a Salt minion without deleting the client. 
+Salt automatically detects that you have a traditional client and does the necessary changes itself. 
+
+If you had already deleted the traditional client and want to register it as a Salt minion again, see xref:administration:troubleshooting/troubleshooting.adoc[Troubleshooting].
 ====
