--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -31,10 +31,11 @@ For information about creating a distribution, see xref:client-configuration:aut
 For information about creating a profile, see xref:client-configuration:autoinst-profiles.adoc[Autoinstallation Profiles].
 
 The Cobbler [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO.
+Specifying the distribution with [option]``--distro`` is mandatory.
 For example:
 
 ----
-cobbler buildiso --iso=/path/to/boot.iso
+cobbler buildiso --iso=/path/to/boot.iso --distro=SLE_15-sp1
 ----
 
 The boot ISO includes all profiles and systems by default.
@@ -43,7 +44,7 @@ For example:
 
 ----
 cobbler buildiso --systems="system1 system2 system3" \
-  --profiles="profile1 profile2 profile3"
+  --profiles="profile1 profile2 profile3 --distro=SLE_15-sp1"
 ----
 
 [NOTE]
