--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -16,12 +16,25 @@ Do not use this feature on production systems.
 The {micro} is an ultra-reliable, lightweight operating system purpose built for edge computing. 
 It leverages the enterprise hardened security and compliance components of SUSE Linux Enterprise and merges them with a modern, immutable, developer-friendly OS platform.
 
+[WARNING]
+====
+When you install from a DVD or ISO image, [package]``salt-transactional-update`` and the dependencies such as Salt and [package]``python3`` are not installed.
+These packages are required to register a {micro} client to {productname}.
+On the client, before registering it, run as [literal]``root``:
++
+----
+transactional-update pkg install salt-transactional-update
+----
+====
+
 The {micro} uses transactional updates.
 Transactional updates are atomic (all updates are applied only if all updates succeed) and support rollbacks. 
 They do not affect a running system as no changes are activated until after the system is rebooted.
 This information is displayed in the menu:Systems[Details > Overview] subtab.
 
 For more information on transactional updates, see https://documentation.suse.com/sles/15-SP3/html/SLES-all/cha-transactional-updates.html
+
+
 
 == Add Software Channels
 
@@ -38,11 +51,11 @@ The products you need for this procedure are:
 | OS Version
 | Product Name
 
-| {micro} 5.0 {x86_64}
-| SUSE Linux Enterprise Micro 5.0 aarch64
+| {micro} 5.1 {x86_64}
+| SUSE Linux Enterprise Micro 5.1 aarch64
 
-| {micro} 5.0 {arm64}
-| SUSE Linux Enterprise Micro 5.0 x86_64
+| {micro} 5.1 {arm64}
+| SUSE Linux Enterprise Micro 5.1 x86_64
 
 |===
 
@@ -63,13 +76,13 @@ The channels you need for this procedure are:
 | Base Channel
 | Updates Channel
 
-| {micro} 5.0 {x86_64}
-| suse-microos-5.0-pool-x86_64
-| suse-microos-5.0-updates-x86_64
+| {micro} 5.1 {x86_64}
+| suse-microos-5.1-pool-x86_64
+| suse-microos-5.1-updates-x86_64
 
-| {micro} 5.0 {arm64}
-| suse-microos-5.0-pool-aarch64
-| suse-microos-5.0-updates-aarch64
+| {micro} 5.1 {arm64}
+| suse-microos-5.1-pool-aarch64
+| suse-microos-5.1-updates-aarch64
 
 |===
 
