--- a/modules/administration/pages/tshoot-sync.adoc
+++ b/modules/administration/pages/tshoot-sync.adoc
@@ -47,7 +47,7 @@ For more on importing GPG keys, see xref:administration:repo-metadata.adoc[].
 
 
 GPG Key Removal from [literal]``spacewalk-repo-sync``::
-Once a GPG key for repository has been manually imported using [literal]``spacewalk-repo-sync`` command, and this key is no longer needed (for example if the the key was  compromised, or was used for testing purposes only), it can be removed from the zypper RPM database used by [literal]``spacewalk-repo-sync`` using the following command:
+When a GPG key for repository has been manually imported using [literal]``spacewalk-repo-sync`` command, and this key is no longer needed (for example if the the key was  compromised, or was used for testing purposes only), it can be removed from the zypper RPM database used by [literal]``spacewalk-repo-sync`` using the following command:
 +
 ----
 rpm --dbpath=/var/lib/spacewalk/reposync/root/var/lib/rpm/ -e gpg-pubkey-*
@@ -55,6 +55,10 @@ rpm --dbpath=/var/lib/spacewalk/reposync/root/var/lib/rpm/ -e gpg-pubkey-*
 +
 where [literal]``gpg-pubkey-*`` is the name of the GPG key to be removed.
 
+
+
+Renewing GPG Key::
+If you want to renew a GPG key, first remove the old key, and then generate and import a new one.
 
 Checksum Mismatch::
 If a checksum has failed, you might see an error like this in the [path]``/var/log/rhn/reposync/*.log`` log file:
