--- a/modules/administration/pages/tshoot-sync.adoc
+++ b/modules/administration/pages/tshoot-sync.adoc
@@ -47,7 +47,7 @@ For more on importing GPG keys, see xref:administration:repo-metadata.adoc[].
 
 
 GPG Key Removal from [literal]``spacewalk-repo-sync``::
-When a GPG key for repository has been manually imported using [literal]``spacewalk-repo-sync`` command, and this key is no longer needed (for example if the the key was compromised, or was used for testing purposes only), it can be removed from the zypper RPM database used by [literal]``spacewalk-repo-sync`` using the following command:
+When a GPG key for repository has been manually imported using [literal]``spacewalk-repo-sync``, and this key is no longer needed (for example if the the key was compromised, or was used for testing purposes only), it can be removed from the zypper RPM database used by [literal]``spacewalk-repo-sync`` with the following command:
 +
 ----
 rpm --dbpath=/var/lib/spacewalk/reposync/root/var/lib/rpm/ -e gpg-pubkey-*
