fix time syntax

--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -71,7 +71,7 @@ image::reportdb_schema.png[]
 To generate and update the data on a peripheral server, the responsible schedule is called `update-reporting-default`. It is executed by default daily at midnight.
 
 On the {productname} Hub there is a second schedule which is important. To fetch the reporting data from all registered peripheral servers, the task with the name `update-reporting-hub-default`
-is executed daily at 1:30am.
+is executed daily at 1:30 AM.
 
 All times are in the local timezone of the server. If the peripheral servers are in different timezones, it makes sense to align the schedules, that all reporting data are gathered
 at a specific point in time, and `update-reporting-hub-default` is running after all peripheral servers have really finished there local jobs.
