--- a/modules/client-configuration/pages/clients-amazon.adoc
+++ b/modules/client-configuration/pages/clients-amazon.adoc
@@ -21,7 +21,7 @@ Traditional clients are not available on {amazon}{nbsp}2.
 ====
 When created at AWS, {amazon} instances always have the same `machine-id` id at `/etc/machine-id`.
 Make sure you regenerate the `machine-id` after the instance is created.
-For more information, see xref:administration:tshoot-registerclones.adoc[].
+For more information, see xref:administration:troubleshooting/tshoot-registerclones.adoc[].
 ====
 
 == Add Software Channels
