--- a/modules/installation-and-upgrade/pages/setup-wizard.adoc
+++ b/modules/installation-and-upgrade/pages/setup-wizard.adoc
@@ -75,4 +75,4 @@ New products will be available for you to use in {productname} when synchronizat
 
 If your synchronization fails, it could be because of a third party GPG key or your company firewall blocking access to the download server.
 Please check the notification details for the error.
-For more information about troubleshooting product synchronization, see xref:administration:tshoot-sync.adoc[].
+For more information about troubleshooting product synchronization, see xref:administration:troubleshooting/tshoot-sync.adoc[].
