--- a/modules/reference/pages/systems/systems-list.adoc
+++ b/modules/reference/pages/systems/systems-list.adoc
@@ -82,9 +82,7 @@ For more information about system groups, see xref:client-configuration:system-g
 
 The menu:Systems[System List > Inactive] section lists every client that has not checked in with the the {productname} Server in 24 hours or more.
 
-For more information about client connections to the server, see xref:client-configuration:contact-methods-intro.adoc[].
-
-For more information on troubleshooting inactive clients, see xref:administration:tshoot-inactiveclients.adoc[].
+For more information on troubleshooting inactive clients, see xref:administration:troubleshooting/tshoot-inactiveclients.adoc[].
 
 
 
