--- a/modules/administration/pages/troubleshooting/WORKING/tshoot-clients.adoc
+++ b/modules/administration/pages/troubleshooting/WORKING/tshoot-clients.adoc
@@ -127,7 +127,8 @@ We're sorry, but the system could not be found.
 This is caused by the new, cloned, system having the same machine ID as an existing, registered, system.
 You can adjust this manually to correct the error and register the cloned system successfully.
 
-For more information and instructions, see xref:administration:troubleshooting/tshoot-registerclones.adoc[].
+
+For more information and instructions, see xref:administration:tshoot-registerclones.adoc[].
 
 
 
