--- a/modules/specialized-guides/pages/salt/salt-formula-saltboot.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-saltboot.adoc
@@ -141,4 +141,4 @@ On the ``msdos`` disk label, you can create a maximum of four primary partition
 Extended partitions are not supported.
 If you need more than four partitions, use the ``GPT`` disk label instead.
 
-For more information on troubleshooting problems with the Saltboot formula, see xref:administration:tshoot-saltboot.adoc[].
+For more information on troubleshooting problems with the Saltboot formula, see xref:administration:troubleshooting/tshoot-saltboot.adoc[].
