--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -21,7 +21,8 @@ The reporting database is a separate database accessible via the network.
 +
 [IMPORTANT]
 ====
-As a requirement we expect all server certificates are signed by the same Root CA. The whole {productname} Hub ernvironment should be using just 1 Root Certificate Authority.
+As a requirement we expect all server certificates are signed by the same Root Certificate Authority (CA).
+The whole {productname} Hub environment should be using only one Root CA.
 ====
 
 === Create a DB user for the reporting
@@ -73,6 +74,7 @@ To generate and update the data on a peripheral server, the responsible schedule
 On the {productname} Hub there is a second schedule which is important. To fetch the reporting data from all registered peripheral servers, the task with the name `update-reporting-hub-default`
 is executed daily at 1:30 AM.
 
-All times are in the local timezone of the server. If the peripheral servers are in different timezones, it makes sense to align the schedules, that all reporting data are gathered
-at a specific point in time, and `update-reporting-hub-default` is running after all peripheral servers have really finished there local jobs.
+All times are in the local timezone of the server.
+If the peripheral servers are in different timezones, it is recommended to align all the schedules.
+Make sure that all reporting data are gathered at a specific point in time, and `update-reporting-hub-default` is running when all peripheral servers have actually finished their local jobs.
 
